Worked on the following Navbar changes In the option, remove blue color and make it purple Make the ruler line in the dropdown as purple Revert the person's icon opacity to 100% make the width fixed and remove horizontal scroll

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,6 +168,8 @@ input[type="text"], textarea, select, button {
 }
 
 
+// Bootstrap overridden
+
 .btn-purple {
     color: #fff;
     background-color: #61318f;
@@ -177,3 +179,13 @@ input[type="text"], textarea, select, button {
 .tooltip{
     font-size: 12px;
  }
+
+ .border-purple {
+    border-bottom: 2px solid #61318f !important;
+}
+
+.dropdown-item {
+    background-color: transparent !important;
+}
+
+.row { margin: 0; padding: 0 }
